refactor: Refactor code and tests